# tevico-community

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main  mkdocs.yml  package-lock.json  pyproject.toml  run.sh  tevico.py  tevico_config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature-request.yml
.github/workflows/: docs.yml
docs/: auto-generate-report.md  cli-params.md  contribute.md  generate-report.md  help.md  index.md  project-setup.md  project-status.md
docs/developer/: getting-started.md  sop.md
docs/developer/concepts/: file-structure.md  workflow.md
docs/developer/entities/: check.md  framework.md  profile.md  provider.md
modules/default/: module.json
modules/default/scans/: kms_key_rotation_scan.py
report/: app.js
report/data/: check_analytics.json  check_report.js  check_reports.json
scripts/: convert_prowler_metadata.py
tests/: test_start_execution.py
tevico/: __main__.py
tevico/app/: framework.py  framework_handler.py  handler.py  main.py  module.py
tevico/cli/: arg_parser.py  cli.py
tevico/engine/: framework.py  handler.py  main.py
tevico/framework/: framework.py  framework_handler.py
tevico/report/: .gitignore  app.js  astro.config.mjs  browse-page.js  browse.html  check-details-page.js  check-details.html  index.html  package-lock.json  package.json  tsconfig.json  well-architected-review.html  well-architected-review.js
tevico/templates/: check_data.jinja2  check_metadata.jinja2  check_python.jinja2  framework_metadata.jinja2  profile_metadata.jinja2
(+121 files in other folders)
