[tool.poetry]
name = "tevico"
version = "0.1.0"
description = "Extensible infrastructure governing framework"
authors = ["Abhay Pai <abhaypai2611@gmail.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
