[tool.poetry]
name = "tevico"
version = "0.1.0"
description = "Extensible infrastructure governing framework"
authors = ["Abhay Pai <abhaypai2611@gmail.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
pydantic = "^2.7.4"
pyyaml = "^6.0.2"
boto3 = "^1.35.3"


[tool.poetry.group.dev.dependencies]
moto = "^5.0.13"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
